--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,11 @@
 [project]
 name = "kplot"
-version = "1.1.0"
+version = "1.1.6"
 description = "a matplotlib wrapper for keyan :-)"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
+    "kbasic>=0.1.4",
     "matplotlib>=3.10.8",
     "numpy>=2.4.2",
 ]
