--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,9 @@ name = "kplot"
 version = "1.1.6"
 description = "a matplotlib wrapper for keyan :-)"
 readme = "README.md"
+authors = [
+  { name="Keyan Gootkin", email="keyangootkin@gmail.com" },
+]
 requires-python = ">=3.11"
 dependencies = [
     "kbasic>=0.1.4",
